# infix

./: .gitignore  .gitmodules  Config.in  Makefile  README.md  TODO.org  external.desc  external.mk  infix.mk  latest  mkdocs.yml  restconf.sh  subscribe_ietf_system.py  subscribe_ietf_system.sh  versions.json
src/confd/: LICENSE  Makefile.am  README.md  check.mk  confd-bootstrap.sh  confd-load.sh  confdrc  configure.ac  sysrepo-bootstrap.sh
src/confd/lib/: asprintf.c  vasprintf.c
src/confd/scripts/: setup.sh
src/confd/share/: Makefile.am  README
src/confd/share/factory/: 10-netconf-server.json  Makefile.am
src/confd/share/factory.d/: 10-firewall.json  10-infix-services.json  10-infix-system.json  10-keystore.json  10-nacm.json  10-nacm.json.in  10-netconf-server.json  10-system.json  Makefile.am
src/confd/share/failure/: 10-nacm.json  10-netconf-server.json  Makefile.am
src/confd/share/failure.d/: 10-authentication.json  10-infix-services.json  10-system.json  Makefile.am
src/confd/share/migrate/: Makefile.am
src/confd/share/test.d/: 10-infix-services.json  10-keystore.json  10-nacm.json  10-netconf-server.json  10-system.json  Makefile.am
src/confd/src/: Makefile.am  base64.c  base64.h  cni.c  cni.h  containers.c  core.c  core.h  dagger.c  dagger.h  dhcp-client.c  dhcp-common.c  dhcp-common.h  dhcp-server.c  dhcpv6-client.c  factory-default.c  factory.c  firewall.c  hardware.c  helpers.c  helpers.h  ieee802-ethernet-interface.c  ietf-factory-default.c  ietf-hardware.c  ietf-interfaces.c  ietf-interfaces.h  ietf-ip.c  ietf-keystore.c  ietf-routing.c  ietf-syslog.c  ietf-system.c  if-bridge-mcd.c  if-bridge-port.c  if-bridge.c  if-gre.c  if-lag.c  if-modem.c  if-veth.c  if-vlan.c  if-vxlan.c  (+52 more)
src/confd/src/confd/: Makefile.am  core.c  core.h  dagger.c  dagger.h  ietf-interfaces.c  ietf-system.c  (+6 more)
src/confd/yang/: Makefile.am  confd.inc  containers.inc  gps.inc  iana-crypt-hash.yang  ietf-crypto-types@2023-12-28.yang  ietf-if-vlan-encapsulation@2023-01-26.yang  ietf-keystore@2023-12-28.yang  ietf-netconf-acm.yang  ietf-tls-client@2023-12-28.yang  ietf-truststore@2023-12-28.yang  infix-containers.yang  infix-containers@2023-12-14.yang  infix-containers@2024-02-01.yang  infix-containers@2024-03-27.yang  infix-crypto-types.yang  infix-crypto-types@2025-02-04.yang  infix-dhcp-client.yang  infix-dhcp-client@2023-05-22.yang  infix-dhcp-client@2024-01-30.yang  infix-dhcp-client@2024-04-12.yang  infix-dhcp-client@2025-01-29.yang  infix-dhcp-common.yang  infix-dhcp-server.yang  infix-dhcp-server@2024-08-18.yang  infix-ethernet-interface.yang  infix-ethernet-interface@2023-11-22.yang  infix-ethernet-interface@2024-01-22.yang  infix-factory-default.yang  infix-hardware@2024-01-18.yang  infix-hardware@2024-04-25.yang  infix-if-bridge.yang  infix-if-bridge@2023-05-31.yang  infix-if-bridge@2023-08-21.yang  infix-if-bridge@2023-11-08.yang  infix-if-bridge@2023-12-02.yang  infix-if-bridge@2024-02-19.yang  infix-if-bridge@2024-03-06.yang  infix-if-bridge@2024-03-28.yang  infix-if-bridge@2024-08-26.yang  (+74 more)
src/confd/yang-setup/: yang-modules-confd.inc
src/execd/: .gitignore  LICENSE  Makefile  Makefile.am  README.md  check.mk  configure.ac  execd.c  execd.h
src/klinfix/src/: Makefile.am  klinfix.c
src/klish-plugin-infix/: LICENSE  Makefile.am  README.md  configure.ac
src/klish-plugin-infix/src/: Makefile.am  infix.c
src/klish-plugin-infix/xml/: Makefile.am  containers.xml  infix.xml  shell.xml  wifi.xml
src/libsrx/: .gitignore  Makefile.am  README.md  check.mk  configure.ac
src/libsrx/src/: Makefile.am  common.h  helpers.c  helpers.h  libsrx.pc.in  lyx.c  lyx.h  srx_val.c  srx_val.h  systemv.c  systemv.h
src/mdns-alias/: README.md  pyproject.toml
src/mdns-alias/mdns_alias/: __init__.py  mdns_alias.py
src/modemd/: 77-mm-dell-port-types.rules  77-mm-modem-gps.rules  LICENSE  finit.conf  modem-carrier  modem-command.c  modem-info  modem-power  modem-rpc  modem-scan-networks  modem-sms  modem-udev  modem-update-firmware  modem-ussd  modemd  modemd.modules-load  modemd.rules  pyproject.toml  qmi-wwan-ids.rules  sim-setup
src/modemd/modemd/: __init__.py  carrier.py  info.py  power.py  rpc.py  scan_networks.py  sim_setup.py  sms.py  udev.py  update_firmware.py  ussd.py
src/net/: .gitignore  LICENSE  Makefile  Makefile.am  README.md  configure.ac  gen.sh  main.c  test.sh
src/net/src/: Makefile.am  main.c
src/net/test/: Makefile.am  bridge-lag.sh  bridge.sh  lib.sh  three-independent.sh
src/netbrowse/: .gitignore  LICENSE  MANIFEST.in  README.md  browse.go  browse.html  go.mod  main.go  netbrowse  pyproject.toml  setup.cfg  setup.py  txt-inventory.md
src/netbrowse/avahi_alias/: __init__.py
src/netbrowse/mdns_hosts/: __init__.py  mdns_hosts.py
src/netbrowse/netbrowse/: __init__.py  mdns_hosts.py  netbrowse.py
src/netbrowse/templates/: browse.html
src/netd/: LICENSE  Makefile.am  README.md  configure.ac  netd.conf
src/netd/src/: config.c  config.h  grpc_backend.cc  grpc_backend.h  json_builder.c  json_builder.h  linux_backend.c  linux_backend.h  netd.c  netd.h  rip.c  rip.h  route.c  route.h
src/onieprom/: pyproject.toml
src/onieprom/onieprom/: __init__.py  __main__.py  tlv.py
src/profeth/src/: Makefile.am  app_gsdml.h  app_utils.c  pnal.h  profeth.c  sampleapp_common.c
src/rauc-installation-status/: Makefile.am  configure.ac  rauc-installation-status.c
src/statd/: .gitignore  LICENSE  Makefile  Makefile.am  README.md  avahi.c  avahi.h  check.mk  cli-pretty  configure.ac  core.c  gpsd.c  gpsd.h  iface-ethtool.c  iface-ethtool.h  iface-ip-addr.c  iface-ip-addr.h  iface-ip-link.c  iface-ip-link.h  journal.c  journal.h  journal_retention.c  journal_retention_stub.c  shared.c  shared.h  statd.c  yanger  yangerd.c  yangerd.h
src/statd/doc/: yangerd-design.md
src/statd/python/: local_install.sh  pyproject.toml
src/sysrest/: LICENSE  configure.ac
src/sysrest/src/: Makefile.am  main.c  util.c
src/test-mode/: LICENSE  Makefile.am  configure.ac
src/test-mode/src/: Makefile.am  test-mode.c
src/test-mode/yang/: Makefile.am  test-mode.inc
(+6427 files in other folders)
