[build-system]
requires = ["setuptools>=42", "wheel"]
#build-backend = "setuptools.build_meta"

[project]
name = "mdns-alias"
version = "1.0"
description = "Request mDNS-SD CNAME over D-Bus to Avahi."
authors = [{name = "Joachim Wiberg", email = "troglobit@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
dependencies = [
    "dbus",
]

#[tool.setuptools.packages.find]
#where = ["mdns_alias"]

[project.scripts]
mdns-alias = "mdns_alias:main"
