[build-system]
requires = ["setuptools>=42", "wheel"]
# build-backend = "setuptools.build_meta"

[project]
name = "netbrowse"
version = "1.0"
description = "mDNS Service Browser"
authors = [{name = "Joachim Wiberg", email = "troglobit@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
dependencies = [
    "flask",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "flake8>=3.8",
]

# [tool.setuptools.packages.find]
# where = ["netbrowse"]

# [tool.setuptools.package-data]
# netbrowse = ["templates/*.html", "static/*"]

[project.scripts]
netbrowse = "netbrowse:main"
