[tool.poetry]
name = "infix-onieprom"
version = "1.0"
description = "ONIE EEPROM parser/generator"
license = "GPLv2"
authors = [
  "KernelKit developers"
]
packages = [
  { include = "onieprom" }
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
onieprom = "onieprom.__main__:main"
