sbin_PROGRAMS = profeth

profeth_SOURCES = profeth.c \
	app_data.c app_data.h \
	app_gsdml.c app_gsdml.h \
	app_log.c app_log.h \
	app_utils.c app_utils.h \
	pnal_filetools.c pnal_filetools.h \
	sampleapp_common.c sampleapp_common.h

profeth_CFLAGS  = -Wall -Wextra -Werror -Wno-unused-parameter
profeth_LDADD   = -losal -lprofinet

