[tool.poetry]
name = "infix-yang-tools"
version = "1.0"
description = "Linux to infix-YANG"
license = "MIT"
packages = [
    { include = "yanger" },
    { include = "cli_pretty" },
    { include = "ospf_status" }
]
authors = [
  "KernelKit developers"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
yanger = "yanger.__main__:main"
cli-pretty = "cli_pretty:main"
ospf-status = "ospf_status:main"
